<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.javahippie.jukebox</groupId>
    <artifactId>parent</artifactId>
    <version>0.3-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <version.maven.plugin.compiler>3.8.1</version.maven.plugin.compiler>
        <version.maven.pugin.surefire>3.0.0-M4</version.maven.pugin.surefire>
    </properties>

    <modules>
        <module>processor</module>
        <module>testtool</module>
    </modules>

    <url>https://github.com/javahippie/jukebox</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/javahippie/jukebox</url>
        <connection>scm:git:git@github.com:javahippie/jukebox.git</connection>
    </scm>

    <developers>
        <developer>
            <name>Tim Zöller</name>
            <email>mail@tim-zoeller.de</email>
            <organization>ilum:e informatik ag</organization>
            <organizationUrl>http://www.ilume.de</organizationUrl>
        </developer>
    </developers>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.maven.plugin.compiler}</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <source>14</source>
                    <target>14</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${version.maven.pugin.surefire}</version>
                <configuration>
                    <forkCount>0</forkCount>
                    <reuseForks>false</reuseForks>
                    <reportsDirectory>target/surefire-reports-${surefire.forkNumber}</reportsDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
